--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
             justify-content: space-between;
             margin: 1rem;
         }
-       
+
 
         /* animation def */
 
@@ -1159,18 +1159,15 @@
 
             /* different version for different page size */
             @keyframes catalogInitRise {
-
-                /* 0% {
-                    transform: translate(-60vw, 0);
-                }
-
-                100% {
-                    transform: translate(0, 0vh);
-                } */
                 0% {
                     transform: translate(0, 60vh);
                 }
-
+                30% {
+                    transform: translate(0, -10vh);
+                }
+                80% {
+                    transform: translate(0, -10vh);
+                }
                 100% {
                     transform: translate(0, 0vh);
                 }
@@ -1203,6 +1200,13 @@
                 width: 100%;
                 z-index: 1;
             }
+
+            .catalog {
+                animation: catalogInitRise 8s;
+                /* animation-iteration-count: 1;
+                animation-fill-mode: forwards; */
+            }
+
 
             .catalogItem {
                 padding: 0;
@@ -1259,20 +1263,6 @@
                 animation-fill-mode: forwards;
             }
 
-            /* @keyframes catalogMainDebut {
-                0% {
-                    height: 2px;
-                }
-
-                50% {
-                    height: 10rem;
-                }
-
-                100% {
-                    height: fit-content;
-                }
-            } */
-
             @keyframes catalogItemDebut {
                 0% {
                     padding: 0;
@@ -1289,7 +1279,7 @@
                     margin: 1rem;
                     height: fit-content;
                     box-shadow: 0 0 6px 8px rgb(234, 234, 246);
-                    border-radius: 5px;                
+                    border-radius: 5px;
                 }
             }
 
