--- a/index.html
+++ b/index.html
@@ -1034,6 +1034,7 @@
         }
 
         /* Styles for FULL page */
+
         @media only screen and (min-width: 850px) {
 
             /* different version for different page size */
@@ -1225,6 +1226,16 @@
         @media only screen and (max-width: 700px) {
 
             /* Your CSS styles for SMALL screens go here */
+
+            body {
+                background-image: url("./img_3sm/background_p3.svg");
+                background-size: cover;
+                min-height: 100%;
+                height: 100%;
+                overflow-y: scroll;
+                /* height: fit-content; */
+                height: 200dvh;
+            }
 
             .menuItemMain,
             .menuItemContact {
