--- a/index.html
+++ b/index.html
@@ -285,11 +285,18 @@
         .aboutUs span {
             font-family: "Arial";
             font-size: 1.2rem;
+            font-weight: 500;
         }
 
-        .aboutUsSpanBold {
-            font-size: 1.5rem;
-            font-weight: 800;
+         .aboutUsSpanBold {
+            /* font-size: 1.5rem; */
+            font-size: 2rem;
+            font-weight: 900;
+        }
+
+        .aboutUs b{
+            /* font-size: 2rem; */
+            /* font-weight: 900; */
         }
 
         .aboutUsSpanSurface {
@@ -1058,6 +1065,7 @@
                 0% {
                     transform: translate(-50vw, 0);
                 }
+
                 100% {
                     opacity: 1;
                     transform: translate(0, 0);
@@ -1379,9 +1387,14 @@
                 left: 5px;
             }
 
-            .aboutUs span            {
-                font-weight: 1.5rem;
+            /* .aboutUs span {
+                font-size: 1.2rem;
             }
+
+            .aboutUsSpanBold {
+                font-size: 1.5rem;
+                font-weight: 900;
+            } */
 
             @keyframes catalogItemDebut {
                 0% {
@@ -1389,9 +1402,11 @@
                     min-height: .1px;
                     height: .1px;
                 }
+
                 50% {
                     height: 15rem;
                 }
+
                 100% {
                     padding: 1rem;
                     margin: 1rem;
@@ -1487,8 +1502,8 @@
         </div>
         <br /><br />
         <div class="onebyone" sec="1">
-            <span class="aboutUsSpanBold " id="aboutUsWelcome">
-                Welcome to 3SM Pte Ltd,</span>
+            <!-- <span class="aboutUsSpanBold" id="aboutUsWelcome">Welcome to 3SM Pte Ltd,</span> -->
+            <b class="aboutUsSpanBold" id="aboutUsWelcome">Welcome to 3SM Pte Ltd,</b>
         </div>
         <br /><br />
         <div class="onebyone" sec="1">
@@ -1497,13 +1512,16 @@
         </div>
         <br /><br />
         <div class="onebyone" sec="2">
-            <span class="aboutUsSpanBold">Our focus </span>
+            <!-- <span class="aboutUsSpanBold">Our focus </span> -->
+            <b class="aboutUsSpanBold">Our focus </b>
             <span>is to provide you with cutting-edge technology to enhance the safety and efficiency of your
                 facilities.</span>
         </div>
         <br /><br />
         <div class="onebyone" sec="3">
-            <span>With </span><span class="aboutUsSpanBold">our expertise </span>
+            <span>With </span>
+            <!-- <span class="aboutUsSpanBold">our expertise </span> -->
+            <b class="aboutUsSpanBold">our expertise </b>
             <span>in License Plate Recognition System for Barrier entry, Cloud-Based Access Control,
                 Visitor Management Software and IOT Sensor Technology, we ensure that you have the best tools
                 to automate and manage your facilities.
@@ -1511,7 +1529,8 @@
         </div>
         <br /><br />
         <div class="onebyone" sec="3">
-            <span class="aboutUsSpanBold">Our Solutions </span>
+            <!-- <span class="aboutUsSpanBold">Our Solutions </span> -->
+            <b class="aboutUsSpanBold">Our Solutions </b>
             <span>are designed to be user-friendly and customizable, providing you with the flexibility to
                 meet your unique security needs. Our team of experts provide you with the highest level of customer
                 service and support.
@@ -1530,7 +1549,8 @@
                 <div class="detailTitle3smName">3SM Pte Ltd</div>
             </div>
             <br /><br /> -->
-            <span class="aboutUsSpanBold">Contacts:</span>
+            <!-- <span class="aboutUsSpanBold">Contacts:</span> -->
+            <b class="aboutUsSpanBold">Contacts:</b>
             <br />
             <div class="contactItem">
                 <div class="contactItemLabel">Email:</div>
@@ -1597,7 +1617,7 @@
             <div class="mission mission_d2">
                 <div class="mission1">Cutting-edge IoT Solutions, <br>
                     User-friendly, Customizable<br>
-                    and Excellent Customer Support.<br>                    
+                    and Excellent Customer Support.<br>
                 </div>
             </div>
         </div>
