--- a/index.html
+++ b/index.html
@@ -1539,12 +1539,12 @@
             <b class="aboutUsSpanBold">Contacts:</b>
             <br />
             <div class="contactItem">
-                <div class="contactItemLabel">Email:</div>
-                <div class="contactItemData">Sales@3sm.com.sg</div>
+                <div class="contactItemLabel"><span>Email:</span></div>
+                <div class="contactItemData"><span>Sales@3sm.com.sg</span></div>
             </div>
             <div class="contactItem">
-                <div class="contactItemLabel">Tel:</div>
-                <div class="contactItemData">+65- 6988 4094</div>
+                <div class="contactItemLabel"><span>Tel:</span></div>
+                <div class="contactItemData"><span>+65- 6988 4094</span></div>
             </div>
         </div>
         <br /><br />
