--- a/index.html
+++ b/index.html
@@ -1317,6 +1317,10 @@
                 z-index: 1;
             }
 
+            .mission1 {
+                font-weight: 500;
+            }
+
             .catalog {
                 animation: catalogInitRise 11s;
                 /* animation-iteration-count: 1;
@@ -1492,7 +1496,7 @@
             <b class="aboutUsSpanBold" id="aboutUsWelcome">Welcome to 3SM Pte Ltd,</b>
         </div>
         <br /><br />
-        <div class="onebyone" sec="1">
+        <div class="onebyone" sec="2">
             <span> your one-stop solution for innovative Automation, Security & Control Systems.
             </span>
         </div>
