--- a/index.html
+++ b/index.html
@@ -1652,7 +1652,7 @@
             </div>
             <div class="catalogItem" id="catalog_weigh">
                 <div class="catalogItemLogo"><img src="./img_3sm/car_license_plate.svg" /></div>
-                <div class="catalogItemTitle">Automated Weighing Solutions</div>
+                <div class="catalogItemTitle">Automated<br/> Weighing Solutions</div>
                 <div><button class="buttonMore" id="moreLicense">...</button></div>
                 <!-- <div class="catalogItemDetailTitle"></div> -->
                 <div class="catalogItemSummary" id="catalog_weigh_summary">
