--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <style>
         :root {
             --internet_of_things_init_v1: 90vh;
-            --internet_of_things_init_v2: 35vh;
+            --internet_of_things_init_v2: 40vh;
         }
 
         * {
@@ -415,7 +415,6 @@
 
             color: #efefef;
 
-            /* margin: 5rem; */
             margin: 0 2.5rem 0 0;
             text-align: right;
         }
@@ -1178,6 +1177,7 @@
             .mission div {
                 font-size: 3.5vw;
                 text-align: right;
+                margin: 0 0 0 0;
             }
 
             .mission_d1 {
@@ -1606,8 +1606,8 @@
             <div class="backgroundItemsRightImgDiv"><img src="img_3sm/background_iot.svg" /></div>
             <div class="mission mission_d2">
                 <div class="mission1">Cutting-edge IoT Solutions, <br>
-                    User-friendly, Customizable<br>
-                    and Excellent Customer Support.<br>
+                    User-friendly, Customizable,<br>
+                    Excellent Customer Support.<br>
                 </div>
             </div>
         </div>
