--- a/index.html
+++ b/index.html
@@ -1622,7 +1622,7 @@
         <div class="catalogMain">
             <div class="catalogItem" id="catalog_vms">
                 <div class="catalogItemLogo"><img src="./img_3sm/vms.svg" /></div>
-                <div class="catalogItemTitle">Visitor Management System</div>
+                <div class="catalogItemTitle">Visitor Management &<br/>License Plate Recognition System</div>
                 <div><button class="buttonMore" id="moreVms">...</button></div>
                 <!-- <div class="catalogItemDetailTitle"></div> -->
                 <div class="catalogItemSummary" id="catalog_vms_summary">Our system is easy to use and deploy. Allows
