--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
             border: 3px solid rgba(55, 55, 132, 0.3);
 
-            overflow: auto;
+            /* overflow: auto; */
         }
 
 
@@ -2294,7 +2294,7 @@
             //>>
 
             catalogItemx.scrollTop = 0;
-            
+
             Array.from(catalogItemx.children).forEach(cic => {
                 cic.style.opacity = 1;
             });
