--- a/index.html
+++ b/index.html
@@ -1532,6 +1532,7 @@
             @keyframes catalogItemGrow {
                 0% {
                     height: 0;
+                    opacity: 0;
                 }
 
                 50% {
@@ -1539,6 +1540,7 @@
                 }
 
                 100% {
+                    opacity: 1;
                     height: fit-content;
                 }
             }
