--- a/index.html
+++ b/index.html
@@ -1671,10 +1671,10 @@
                 <div class="contactItemLabel"><span>Email:</span></div>
                 <div class="contactItemData"><span>Sales@3sm.com.sg</span></div>
             </div>
-            <div class="contactItem">
+            <!-- <div class="contactItem">
                 <div class="contactItemLabel"><span>Tel:</span></div>
                 <div class="contactItemData"><span>+65- 6988 4094</span></div>
-            </div>
+            </div> -->
         </div>
         <br /><br />
         <button class="buttonX" id="aboutUsExit">X</button>
