--- a/index.html
+++ b/index.html
@@ -1691,10 +1691,10 @@
             <div class="contactItemLabel">Email:</div>
             <div class="contactItemData">Sales@3sm.com.sg</div>
         </div>
-        <div class="contactItem">
+        <!-- <div class="contactItem">
             <div class="contactItemLabel">Tel:</div>
             <div class="contactItemData">+65- 6988 4094</div>
-        </div>
+        </div> -->
         <button class="buttonX" id="contactExit">X</button>
     </div>
     <div class="services">
